feat: Implement multi-step signup process with OTP verification; update Login component and README

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
     "react-tinder-card": "^1.6.4",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "lucide-react": "^0.546.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
